Adds changes and favicon

--- a/source/projects.html
+++ b/source/projects.html
@@ -28,25 +28,25 @@
           <h1 class="visually-hidden">Мои проекты</h1>
           <ul class="projects__list">
             <li class="projects__item">
-              <a class="projects__link" href="cat-energy.html">
+              <a class="projects__link" href="projects/cat-energy.html">
                 <h2 class="projects__title">Cat Energy</h2>
                 <p class="projects__description">Интернет-магазин</p>
               </a>
             </li>
             <li class="projects__item">
-              <a class="projects__link" href="kekstagram.html">
+              <a class="projects__link" href="projects/kekstagram.html">
                 <h2 class="projects__title">Kekstagram</h2>
                 <p class="projects__description">Сервис просмотра изображений</p>
               </a>
             </li>
             <li class="projects__item">
-              <a class="projects__link" href="drink2go.html">
+              <a class="projects__link" href="projects/drink2go.html">
                 <h2 class="projects__title">Drink2Go</h2>
                 <p class="projects__description">Интернет-магазин кофейных напитков</p>
               </a>
             </li>
             <li class="projects__item">
-              <a class="projects__link" href="sedona.html">
+              <a class="projects__link" href="projects/sedona.html">
                 <h2 class="projects__title">Sedona</h2>
                 <p class="projects__description">Сайт по поиску жилья</p>
               </a>
