--- a/source/projects/kekstagram.html
+++ b/source/projects/kekstagram.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dusmkiy Andrey</title>
-    <link rel="icon" href="favicon.ico">
-    <link rel="icon" href="img/favicon/favicon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="img/favicon/favicon-apple.png">
-    <link rel="manifest" href="manifest.webmanifest">
+    <!-- <link rel="icon" href="favicon.ico"> -->
+    <!-- <link rel="icon" href="img/favicon/favicon.svg" type="image/svg+xml"> -->
+    <!-- <link rel="apple-touch-icon" href="img/favicon/favicon-apple.png"> -->
+    <!-- <link rel="manifest" href="manifest.webmanifest"> -->
     <!-- <link rel="preload" href="fonts/Montserrat-400.woff2" as="font"> -->
-    <link rel="preload" href="css/style.css" as="style">
-    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="preload" href="../css/style.css" as="style"> -->
+    <link rel="stylesheet" href="../css/style.css">
   </head>
   <body class="page__body page__body--white">
     <header class="header">
       <div class="header__container">
         <nav class="header__navigation">
-          <a href="projects.html" class="header__link header__link--black header__link--cat-energy">
+          <a href="../projects.html" class="header__link header__link--black header__link--kekstagram">
             <span>проекты</span>
           </a>
         </nav>
@@ -26,14 +26,21 @@
       <div class="main__container">
         <section class="hero">
           <div class="hero__container">
-            <h1 class="hero__title">Cat Energy</h1>
+            <h1 class="hero__title">Kekstagram</h1>
             <p class="hero__tagline">Занялся собой? Займись котом!</p>
-            <img class="hero__image" src="img/cat-energy-hero@1x.jpg" width="1440" height="694" alt="">
+            <div class="hero__image-wrapper">
+              <picture>
+                <source type="image/webp"
+                  srcset="../img/kekstagram-hero@1x.webp 1x, ../img/kekstagram-hero@2x.webp 2x">
+                <img class="hero__image" src="../img/kekstagram-hero@1x.jpg"
+                  srcset="../img/kekstagram-hero@2x.jpg 2x" width="1440" height="952" alt="Проект Кекстаграм.">
+              </picture>
+            </div>
           </div>
         </section>
         <section class="project content">
           <div class="project__container content__container">
-            <h2 class="project__title content__title">Интернет-магазин Cat Energy</h2>
+            <h2 class="project__title content__title">Kekstagram</h2>
             <p class="project__description">
               Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету? Необходимо заработать авторитет среди дворовых котов и даже собак? Cat Energy поможет подобрать и заказать подходящую систему функиционального питания вашему коту для сброса лишнего веса или набора мышечной массы.
             </p>
