--- a/source/projects/cat-energy.html
+++ b/source/projects/cat-energy.html
@@ -3,13 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dusmkiy Andrey</title>
-    <!-- <link rel="icon" href="favicon.ico"> -->
-    <!-- <link rel="icon" href="img/favicon/favicon.svg" type="image/svg+xml"> -->
-    <!-- <link rel="apple-touch-icon" href="img/favicon/favicon-apple.png"> -->
-    <!-- <link rel="manifest" href="manifest.webmanifest"> -->
+    <title>Andrey Dumskiy</title>
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="img/favicon/favicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="img/favicon/favicon-apple.png">
+    <link rel="manifest" href="manifest.webmanifest">
     <!-- <link rel="preload" href="fonts/Montserrat-400.woff2" as="font"> -->
-    <!-- <link rel="preload" href="../css/style.css" as="style"> -->
     <link rel="stylesheet" href="../vendor/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
   </head>
@@ -41,28 +40,21 @@
         </section>
         <section class="project">
           <div class="project__container">
-            <h2 class="project__title">Интернет-магазин Cat Energy</h2>
+            <h2 class="project__title">О проекте</h2>
             <p class="project__description">
-              Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету? Необходимо заработать авторитет среди дворовых котов и даже собак? Cat Energy поможет подобрать и заказать подходящую систему функиционального питания вашему коту для сброса лишнего веса или набора мышечной массы.
+              Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету? Необходимо заработать авторитет среди дворовых котов и даже собак? Интернет-магазин Cat Energy поможет подобрать и заказать подходящую систему функиционального питания вашему коту для сброса лишнего веса или набора мышечной массы.
             </p>
             <a class="project__link project__link--site" href="">Сайт Cat Energy</a>
             <a class="project__link project__link--github" href="">Репозиторий на GitHub</a>
-            <h2 class="project__title">Технические особенности</h2>
-            <p class="project__text">
-              Дизайн макета выглядел минималистичным, но сверстать не перегруженный и информативный интерфейс, как оказалось - не такая простая задача, как казалось на первый взгляд.
-            </p>
+            <h2 class="project__title">Техническая реализация</h2>
             <h3 class="project__subtitle">Адаптивная верстка</h3>
             <p class="project__text">
-              Сайт состоит из
+              Сайт состовляет из себя совокупность трех страниц: главной, каталога и страницы подбора программы питания.
             </p>
-            <!-- <picture>
-              <source type="image/webp"
-                srcset="../img/cat-energy-devices@1x.webp 1x, ../img/cat-energy-devices@2x.webp 2x">
-              <img class="project__image" src="../img/cat-energy-devices@1x.jpg"
-                srcset="../img/cat-energy-devices@2x.jpg 2x" width="1440" height="1224" alt="Страница сайта Кэт Энерджи на трех устройствах. Смартфон, планшет, компьютер.">
-            </picture> -->
-
-            <div class="project__slider slider carousel slide" id="carouselExampleIndicators" data-bs-ride="true">
+            <p class="project__text">
+              Для каждой страницы выполнена фиксированная верстка трёх состояний: мобильная, планшетная и десктопная.
+            </p>
+            <div class="project__slider project__slider--nojs slider carousel slide" id="carouselExampleIndicators" data-bs-ride="true">
               <div class="slider__indicators carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -72,25 +64,25 @@
                 <div class="slider__item carousel-item active">
                   <picture>
                     <source type="image/webp"
-                      srcset="../img/cat-energy-devices@1x.webp 1x, ../img/cat-energy-devices@2x.webp 2x">
-                    <img class="slider__image d-block w-100" src="../img/cat-energy-devices@1x.jpg"
-                      srcset="../img/cat-energy-devices@2x.jpg 2x" width="1440" height="1224" alt="Страница сайта Кэт Энерджи на трех устройствах. Смартфон, планшет, компьютер.">
+                      srcset="../img/cat-energy-devices-index@1x.webp 1x, ../img/cat-energy-devices-index@2x.webp 2x">
+                    <img class="slider__image d-block w-100" src="../img/cat-energy-devices-index@1x.jpg"
+                      srcset="../img/cat-energy-devices-index@2x.jpg 2x" width="1440" height="1224" alt="Главная страница Кэт Энерджи на трех устройствах. Смартфон, планшет, компьютер.">
                   </picture>
                 </div>
                 <div class="slider__item carousel-item">
                   <picture>
                     <source type="image/webp"
-                      srcset="../img/kekstagram-devices@1x.webp 1x, ../img/kekstagram-devices@2x.webp 2x">
-                    <img class="slider__image d-block w-100" src="../img/kekstagram-devices@1x.png"
-                      srcset="../img/kekstagram-devices@2x.jpg 2x" width="1440" height="1224" alt="Страница сайта Кэт Энерджи на трех устройствах. Смартфон, планшет, компьютер.">
+                      srcset="../img/cat-energy-devices-catalog@1x.webp 1x, ../img/cat-energy-devices-catalog@2x.webp 2x">
+                    <img class="slider__image d-block w-100" src="../img/cat-energy-devices-catalog@1x.jpg"
+                      srcset="../img/cat-energy-devices-catalog@2x.jpg 2x" width="1440" height="1224" alt="Страница каталога Кэт Энерджи на трех устройствах. Смартфон, планшет, компьютер.">
                   </picture>
                 </div>
                 <div class="slider__item carousel-item">
                   <picture>
                     <source type="image/webp"
-                      srcset="../img/drink2go-devices@1x.webp 1x, ../img/drink2go-devices@2x.webp 2x">
-                    <img class="slider__image d-block w-100" src="../img/drink2go-devices@1x.png"
-                      srcset="../img/drink2go-devices@2x.jpg 2x" width="1440" height="1224" alt="Страница сайта Кэт Энерджи на трех устройствах. Смартфон, планшет, компьютер.">
+                      srcset="../img/cat-energy-devices-form@1x.webp 1x, ../img/cat-energy-devices-form@2x.webp 2x">
+                    <img class="slider__image d-block w-100" src="../img/cat-energy-devices-form@1x.jpg"
+                      srcset="../img/cat-energy-devices-form@2x.jpg 2x" width="1440" height="1224" alt="Страница подбора программы Кэт Энерджи на трех устройствах. Смартфон, планшет, компьютер.">
                   </picture>
                 </div>
               </div>
@@ -103,25 +95,99 @@
                 <span class="visually-hidden">Next</span>
               </button>
             </div>
-
+            <picture>
+              <source type="image/webp"
+                srcset="../img/cat-energy-devices-index@1x.webp 1x, ../img/cat-energy-devices-index@2x.webp 2x">
+              <img class="project__image project__image--large project__image--nojs" src="../img/cat-energy-devices-index@1x.jpg"
+                srcset="../img/cat-energy-devices-index@2x.jpg 2x" width="1440" height="1224" alt="Главная страница Кэт Энерджи на трех устройствах. Смартфон, планшет, компьютер.">
+            </picture>
+            <picture>
+              <source type="image/webp"
+                srcset="../img/cat-energy-devices-catalog@1x.webp 1x, ../img/cat-energy-devices-catalog@2x.webp 2x">
+              <img class="project__image project__image--large project__image--nojs" src="../img/cat-energy-devices-catalog@1x.jpg"
+                srcset="../img/cat-energy-devices-catalog@2x.jpg 2x" width="1440" height="1224" alt="Страница каталога Кэт Энерджи на трех устройствах. Смартфон, планшет, компьютер.">
+            </picture>
+            <picture>
+              <source type="image/webp"
+                srcset="../img/cat-energy-devices-form@1x.webp 1x, ../img/cat-energy-devices-form@2x.webp 2x">
+              <img class="project__image project__image--large project__image--nojs" src="../img/cat-energy-devices-form@1x.jpg"
+                srcset="../img/cat-energy-devices-form@2x.jpg 2x" width="1440" height="1224" alt="Страница подбора программы Кэт Энерджи на трех устройствах. Смартфон, планшет, компьютер.">
+            </picture>
+            <h3 class="project__subtitle">Разметка и Стилизация</h3>
+            <p class="project__text">
+              Семантическая разметка страниц выполнена на HTML5 с применением методологии БЭМ, и отвечает критериям валидности и доступности.
+            </p>
+            <p class="project__text">
+              Стилизация страниц выполнена на CSS3 c использованием препроцессора Sass (синтаксис SCSS).
+            </p>
+            <h3 class="project__subtitle">Сетки страниц и компонентов</h3>
+            <p class="project__text">
+              Сетки крупных структурных блоков и мелких компонентов построены при помощи Flexbox и Grid Layout, не боятся переполения контентом, и перестраиваются в зависимости от разрешения экрана устройства пользователя.
+            </p>
             <h3 class="project__subtitle">Адаптивная графика</h3>
-            <p class="project__text"></p>
-            <h3 class="project__subtitle">Ретинизация</h3>
-            <p class="project__text"></p>
-            <h3 class="project__subtitle">Страницы</h3>
-            <p class="project__text"></p>
+            <p class="project__text">
+              Выполнено кадрирование контентных изображений для загрузки определенных изображений в зависимости от разрешения экрана устройства пользователя.
+            </p>
+            <p class="project__text">
+              Растровая графика в проекте подготовлена для двух вариантов экранов: с обычной и двойной плотностью пикселей.
+            </p>
+            <h3 class="project__subtitle">Интерактивные карты</h3>
+            <p class="project__text">
+              Интерактивные карты в проекте реализованы с использованием Google Maps API.
+            </p>
+            <picture>
+              <source type="image/webp"
+                srcset="../img/cat-energy-mobile-map@1x.webp 1x, ../img/cat-energy-mobile-map@2x.webp 2x">
+              <img class="project__image" src="../img/cat-energy-mobile-map@1x.jpg"
+                srcset="../img/cat-energy-mobile-map@2x.jpg 2x" width="356" height="725" alt="Страница сайта Кэт Энерджи на трех устройствах. Смартфон, планшет, компьютер.">
+            </picture>
+            <p class="project__text">
+              На случай отказа работоспособности JavaScript предусмотрено отображение изображения карты.
+            </p>
+            <picture>
+              <source type="image/webp"
+                srcset="../img/cat-energy-mobile-map-nojs@1x.webp 1x, ../img/cat-energy-mobile-map-nojs@2x.webp 2x">
+              <img class="project__image" src="../img/cat-energy-mobile-map-nojs@1x.jpg"
+                srcset="../img/cat-energy-mobile-map-nojs@2x.jpg 2x" width="356" height="725" alt="Страница сайта Кэт Энерджи на трех устройствах. Смартфон, планшет, компьютер.">
+            </picture>
             <h3 class="project__subtitle">Мобильное меню</h3>
-            <p class="project__text"></p>
-            <h3 class="project__subtitle">Кросбраузерность</h3>
-            <p class="project__text"></p>
-            <h3 class="project__subtitle">Pixel Perfect</h3>
-            <p class="project__text"></p>
+            <p class="project__text">
+              Мобильное меню реализовано с использованием нативного JavaScript, и работает по класической схеме: по клику на бургер - открывается, на крестик - закрывается.
+            </p>
+            <picture>
+              <source type="image/webp"
+                srcset="../img/cat-energy-mobile-menu@1x.webp 1x, ../img/cat-energy-mobile-menu@2x.webp 2x">
+              <img class="project__image" src="../img/cat-energy-mobile-menu@1x.jpg"
+                srcset="../img/cat-energy-mobile-menu@2x.jpg 2x" width="812" height="725" alt="Страница сайта Кэт Энерджи на трех устройствах. Смартфон, планшет, компьютер.">
+            </picture>
+            <p class="project__text">
+              На случай отказа работоспособности JavaScript предусмотрено статическое отображение мобильного меню в открытом состоянии.
+            </p>
+            <picture>
+              <source type="image/webp"
+                srcset="../img/cat-energy-mobile-menu-nojs@1x.webp 1x, ../img/cat-energy-mobile-menu-nojs@2x.webp 2x">
+              <img class="project__image" src="../img/cat-energy-mobile-menu-nojs@1x.jpg"
+                srcset="../img/cat-energy-mobile-menu-nojs@2x.jpg 2x" width="356" height="725" alt="Страница сайта Кэт Энерджи на трех устройствах. Смартфон, планшет, компьютер.">
+            </picture>
+            <h3 class="project__subtitle">Оптимизация</h3>
+            <p class="project__text">
+              Для браузеров, поддерживающих формат WebP, в проекте подготовлены контентные изображения в данном формате.
+            </p>
+            <p class="project__text">
+              Векторные изображения на странице объединены в спрайт.
+            </p>
+            <p class="project__text">
+              Реализована предзагрузка шрифтов.
+            </p>
+            <h3 class="project__subtitle">Кроссбраузерность</h3>
+            <p class="project__text">
+              Все страницы и элементы сайта идентично отображаются в последних версиях браузеров Chrome, Firefox, Safari.
+            </p>
           </div>
         </section>
-
       </div>
     </main>
-
     <script src="../vendor/bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="../js/main.js" type="module"></script>
   </body>
 </html>
