--- a/source/index.html
+++ b/source/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dusmkiy Andrey</title>
+    <title>Andrey Dumskiy</title>
     <link rel="icon" href="favicon.ico">
     <link rel="icon" href="img/favicon/favicon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="img/favicon/favicon-apple.png">
@@ -14,28 +14,33 @@
   </head>
   <body class="page__body">
     <main class="main">
-      <section class="main-hero">
-        <div class="main-hero__container">
-          <h1 class="visually-hidden">Андрей Думский</h1>
-          <div class="main-hero__acquaintance acquaintance">
-            <p class="acquaintance__text">Привет.</p>
-            <p class="acquaintance__text">Я</p>
-            <p class="acquaintance__text">Андрей</p>
-          </div>
-          <nav class="main-hero__navigation navigation">
+      <section class="major-hero">
+        <div class="major-hero__container">
+          <h1 class="major-hero__acquaintance major-hero__acquaintance--nojs acquaintance">
+            <div class="acquaintance__text acquaintance__text--white">
+              <span>Привет.</span>
+            </div>
+            <div class="acquaintance__text">
+              <span>Я</span>
+            </div>
+            <div class="acquaintance__text">
+              <span>Андрей</span>
+            </div>
+          </h1>
+          <nav class="major-hero__navigation major-hero__navigation--active navigation">
             <ul class="navigation__list">
               <li class="navigation__item">
-                <a class="navigation__link navigation__link--about" href="about.html">
+                <a class="navigation__link navigation__link--about navigation__link--nojs navigation__link--white" href="about.html">
                   <span>Обо мне</span>
                 </a>
               </li>
               <li class="navigation__item">
-                <a class="navigation__link navigation__link--red navigation__link--projects" href="projects.html">
+                <a class="navigation__link navigation__link--projects navigation__link--nojs" href="projects.html">
                   <span>Проекты</span>
                 </a>
               </li>
               <li class="navigation__item">
-                <a class="navigation__link navigation__link--red navigation__link--contacts" href="contacts.html">
+                <a class="navigation__link navigation__link--contacts navigation__link--nojs" href="contacts.html">
                   <span>Контакты</span>
                 </a>
               </li>
@@ -44,6 +49,6 @@
         </div>
       </section>
     </main>
-    <!-- <script src="js/main.js" type="module"></script> -->
+    <script src="js/main.js" type="module"></script>
   </body>
 </html>
