--- a/source/projects/cat-energy.html
+++ b/source/projects/cat-energy.html
@@ -26,8 +26,12 @@
       <div class="main__container">
         <section class="hero">
           <div class="hero__container">
-            <h1 class="hero__title">Cat Energy</h1>
-            <p class="hero__tagline">Занялся собой? Займись котом!</p>
+            <h1 class="hero__title">
+              <span>Cat Energy</span>
+            </h1>
+            <p class="hero__tagline">
+              <span>Занялся собой? Займись котом!</span>
+            </p>
             <div class="hero__image-wrapper">
               <picture>
                 <source type="image/webp"
