--- a/source/about.html
+++ b/source/about.html
@@ -26,7 +26,9 @@
       <div class="main__container">
         <section class="hero">
           <div class="hero__container">
-            <h1 class="hero__title">Я web-разработчик<br>из Санкт-Петербурга</h1>
+            <h1 class="hero__title">
+              <span>Я web-разработчик<br>из Санкт-Петербурга</span>
+            </h1>
           </div>
         </section>
         <section class="about content">
