Adds photos and js tap mobile

--- a/source/index.html
+++ b/source/index.html
@@ -16,7 +16,7 @@
     <main class="main">
       <section class="major-hero">
         <div class="major-hero__container">
-          <h1 class="major-hero__acquaintance major-hero__acquaintance--nojs acquaintance">
+          <h1 class="major-hero__acquaintance acquaintance acquaintance--nojs acquaintance--show">
             <div class="acquaintance__text acquaintance__text--white">
               <span>Привет.</span>
             </div>
@@ -27,20 +27,20 @@
               <span>Андрей</span>
             </div>
           </h1>
-          <nav class="major-hero__navigation major-hero__navigation--active navigation">
+          <nav class="major-hero__navigation navigation navigation--nojs navigation--hidden">
             <ul class="navigation__list">
               <li class="navigation__item">
-                <a class="navigation__link navigation__link--about navigation__link--nojs navigation__link--white" href="about.html">
+                <a class="navigation__link navigation__link--about navigation__link--white" href="about.html">
                   <span>Обо мне</span>
                 </a>
               </li>
               <li class="navigation__item">
-                <a class="navigation__link navigation__link--projects navigation__link--nojs" href="projects.html">
+                <a class="navigation__link navigation__link--projects" href="projects.html">
                   <span>Проекты</span>
                 </a>
               </li>
               <li class="navigation__item">
-                <a class="navigation__link navigation__link--contacts navigation__link--nojs" href="contacts.html">
+                <a class="navigation__link navigation__link--contacts" href="contacts.html">
                   <span>Контакты</span>
                 </a>
               </li>
