--- a/source/about.html
+++ b/source/about.html
@@ -26,9 +26,17 @@
       <div class="main__container">
         <section class="hero">
           <div class="hero__container">
-            <h1 class="hero__title">
+            <h1 class="hero__title hero__title--margin-b">
               <span>Я web-разработчик<br>из Санкт-Петербурга</span>
             </h1>
+            <div class="hero__image-wrapper">
+              <picture>
+                <source type="image/webp"
+                  srcset="img/my-photo-about@1x.webp 1x, img/my-photo-about@2x.webp 2x">
+                <img class="hero__image" src="img/my-photo-about@1x.jpg"
+                  srcset="img/my-photo-about@2x.jpg 2x" width="1440" height="961" alt="Моё фото.">
+              </picture>
+            </div>
           </div>
         </section>
         <section class="about content">
