Adds mobile version for photo and links

--- a/source/projects/drink2go.html
+++ b/source/projects/drink2go.html
@@ -3,13 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dusmkiy Andrey</title>
-    <!-- <link rel="icon" href="favicon.ico"> -->
-    <!-- <link rel="icon" href="img/favicon/favicon.svg" type="image/svg+xml"> -->
-    <!-- <link rel="apple-touch-icon" href="img/favicon/favicon-apple.png"> -->
-    <!-- <link rel="manifest" href="manifest.webmanifest"> -->
-    <!-- <link rel="preload" href="fonts/Montserrat-400.woff2" as="font"> -->
-    <!-- <link rel="preload" href="../css/style.css" as="style"> -->
+    <title>Andrey Dumskiy</title>
+    <link rel="icon" href="../favicon.ico">
+    <link rel="icon" href="../img/favicon/favicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="../img/favicon/favicon-apple.png">
+    <link rel="manifest" href="../manifest.webmanifest">
+    <link rel="stylesheet" href="../vendor/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
   </head>
   <body class="page__body page__body--white">
@@ -40,10 +39,12 @@
         </section>
         <section class="project content">
           <div class="project__container content__container">
-            <h2 class="project__title content__title">Интернет-магазин Drink2Go</h2>
+            <h2 class="project__title content__title">О проекте</h2>
             <p class="project__description">
-              Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету? Необходимо заработать авторитет среди дворовых котов и даже собак? Cat Energy поможет подобрать и заказать подходящую систему функиционального питания вашему коту для сброса лишнего веса или набора мышечной массы.
+              Drink2Go - это интернет-магазин кофейных напитков. Свежесваренный кофе без кофеина из Эфиопии — то, что нужно для расслабления после тяжёлого рабочего дня. Сочетание перуанской высокогорной арабики с молоком ламы и лавандовым сиропом унесёт вас прямо на вершину Радужных гор. А тройной эспрессо из Колумбии, чернее самой тёмной ночи, покажет вам, что такое настоящая бодрость.
             </p>
+            <a class="project__link project__link--site" href="https://dumskiy.github.io/sites/drink2go/">Сайт Drink2go</a>
+            <a class="project__link project__link--github" href="https://github.com/Dumskiy/drink2go">Репозиторий на GitHub</a>
           </div>
         </section>
         <section class="technologies content">
