--- a/source/projects/kekstagram.html
+++ b/source/projects/kekstagram.html
@@ -3,13 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dusmkiy Andrey</title>
-    <!-- <link rel="icon" href="favicon.ico"> -->
-    <!-- <link rel="icon" href="img/favicon/favicon.svg" type="image/svg+xml"> -->
-    <!-- <link rel="apple-touch-icon" href="img/favicon/favicon-apple.png"> -->
-    <!-- <link rel="manifest" href="manifest.webmanifest"> -->
-    <!-- <link rel="preload" href="fonts/Montserrat-400.woff2" as="font"> -->
-    <!-- <link rel="preload" href="../css/style.css" as="style"> -->
+    <title>Andrey Dumskiy</title>
+    <link rel="icon" href="../favicon.ico">
+    <link rel="icon" href="../img/favicon/favicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="../img/favicon/favicon-apple.png">
+    <link rel="manifest" href="../manifest.webmanifest">
+    <link rel="stylesheet" href="../vendor/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
   </head>
   <body class="page__body page__body--white">
@@ -27,7 +26,7 @@
         <section class="hero">
           <div class="hero__container">
             <h1 class="hero__title">Kekstagram</h1>
-            <p class="hero__tagline">Занялся собой? Займись котом!</p>
+            <p class="hero__tagline">Делись яркими моментами</p>
             <div class="hero__image-wrapper">
               <picture>
                 <source type="image/webp"
@@ -40,10 +39,12 @@
         </section>
         <section class="project content">
           <div class="project__container content__container">
-            <h2 class="project__title content__title">Kekstagram</h2>
+            <h2 class="project__title content__title">О проекте</h2>
             <p class="project__description">
-              Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету? Необходимо заработать авторитет среди дворовых котов и даже собак? Cat Energy поможет подобрать и заказать подходящую систему функиционального питания вашему коту для сброса лишнего веса или набора мышечной массы.
+              Kekstagram — это сервис для обмена фотографиями. Пользователям предоставлена возможность загружать свои фотографии, которые можно редактировать с помощью фильтров и организовывать с помощью хештегов. Пользователи могут просматривать контент других пользователей, ставить лайки и оставлять комментарии.
             </p>
+            <a class="project__link project__link--site" href="https://dumskiy.github.io/sites/kekstagram/">Сайт Kekstagram</a>
+            <a class="project__link project__link--github" href="https://github.com/Dumskiy/2349525-kekstagram-1">Репозиторий на GitHub</a>
           </div>
         </section>
         <section class="technologies content">
