--- a/source/projects/sedona.html
+++ b/source/projects/sedona.html
@@ -3,13 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dusmkiy Andrey</title>
-    <!-- <link rel="icon" href="favicon.ico"> -->
-    <!-- <link rel="icon" href="img/favicon/favicon.svg" type="image/svg+xml"> -->
-    <!-- <link rel="apple-touch-icon" href="img/favicon/favicon-apple.png"> -->
-    <!-- <link rel="manifest" href="manifest.webmanifest"> -->
-    <!-- <link rel="preload" href="fonts/Montserrat-400.woff2" as="font"> -->
-    <!-- <link rel="preload" href="../css/style.css" as="style"> -->
+    <title>Andrey Dumskiy</title>
+    <link rel="icon" href="../favicon.ico">
+    <link rel="icon" href="../img/favicon/favicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="../img/favicon/favicon-apple.png">
+    <link rel="manifest" href="../manifest.webmanifest">
+    <link rel="stylesheet" href="../vendor/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
   </head>
   <body class="page__body page__body--white">
@@ -27,23 +26,25 @@
         <section class="hero">
           <div class="hero__container">
             <h1 class="hero__title">Sedona</h1>
-            <p class="hero__tagline">Занялся собой? Займись котом!</p>
+            <p class="hero__tagline">Круче, чем Гранд-Каньон!</p>
             <div class="hero__image-wrapper">
               <picture>
                 <source type="image/webp"
                   srcset="../img/sedona-hero@1x.webp 1x, ../img/sedona-hero@2x.webp 2x">
                 <img class="hero__image" src="../img/sedona-hero@1x.jpg"
-                  srcset="../img/sedona-hero@2x.jpg 2x" width="1440" height="952" alt="Проект Кэт Энерджи.">
+                  srcset="../img/sedona-hero@2x.jpg 2x" width="1440" height="952" alt="Проект Седона.">
               </picture>
             </div>
           </div>
         </section>
         <section class="project content">
           <div class="project__container content__container">
-            <h2 class="project__title content__title">Sedona</h2>
+            <h2 class="project__title content__title">О проекте</h2>
             <p class="project__description">
-              Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету? Необходимо заработать авторитет среди дворовых котов и даже собак? Cat Energy поможет подобрать и заказать подходящую систему функиционального питания вашему коту для сброса лишнего веса или набора мышечной массы.
+              Sedona - это сайт по поиску гостевого жилья в небольшом городке с одноименным названием в Американском штате Аризона. После указания дат поездки, пользователям будут представлены лучшие предложения в Седоне с возможностью отбора по типу жилья, инфраструктуре и стоимости.
             </p>
+            <a class="project__link project__link--site" href="https://dumskiy.github.io/sites/sedona/">Сайт Sedona</a>
+            <a class="project__link project__link--github" href="https://github.com/Dumskiy/html1-sedona-dumskiy">Репозиторий на GitHub</a>
           </div>
         </section>
         <section class="technologies content">
@@ -52,7 +53,6 @@
 
           </div>
         </section>
-
       </div>
     </main>
   </body>
