--- a/source/index.html
+++ b/source/index.html
@@ -8,8 +8,6 @@
     <link rel="icon" href="img/favicon/favicon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="img/favicon/favicon-apple.png">
     <link rel="manifest" href="manifest.webmanifest">
-    <!-- <link rel="preload" href="fonts/Montserrat-400.woff2" as="font"> -->
-    <link rel="preload" href="css/style.css" as="style">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page__body">
@@ -50,5 +48,6 @@
       </section>
     </main>
     <script src="js/main.js" type="module"></script>
+    <script src="js/tap-mobile.js" type="module"></script>
   </body>
 </html>
