--- a/source/projects.html
+++ b/source/projects.html
@@ -3,13 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dusmkiy Andrey</title>
+    <title>Andrey Dumskiy</title>
     <link rel="icon" href="favicon.ico">
     <link rel="icon" href="img/favicon/favicon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="img/favicon/favicon-apple.png">
     <link rel="manifest" href="manifest.webmanifest">
-    <!-- <link rel="preload" href="fonts/Montserrat-400.woff2" as="font"> -->
-    <link rel="preload" href="css/style.css" as="style">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page__body">
