--- a/source/projects/cat-energy.html
+++ b/source/projects/cat-energy.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Andrey Dumskiy</title>
-    <link rel="icon" href="favicon.ico">
-    <link rel="icon" href="img/favicon/favicon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="img/favicon/favicon-apple.png">
-    <link rel="manifest" href="manifest.webmanifest">
-    <!-- <link rel="preload" href="fonts/Montserrat-400.woff2" as="font"> -->
+    <link rel="icon" href="../favicon.ico">
+    <link rel="icon" href="../img/favicon/favicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="../img/favicon/favicon-apple.png">
+    <link rel="manifest" href="../manifest.webmanifest">
     <link rel="stylesheet" href="../vendor/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
   </head>
@@ -48,8 +47,8 @@
             <p class="project__description">
               Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету? Необходимо заработать авторитет среди дворовых котов и даже собак? Интернет-магазин Cat Energy поможет подобрать и заказать подходящую систему функиционального питания вашему коту для сброса лишнего веса или набора мышечной массы.
             </p>
-            <a class="project__link project__link--site" href="">Сайт Cat Energy</a>
-            <a class="project__link project__link--github" href="">Репозиторий на GitHub</a>
+            <a class="project__link project__link--site" href="https://dumskiy.github.io/sites/cat-energy/">Сайт Cat Energy</a>
+            <a class="project__link project__link--github" href="https://github.com/Dumskiy/html2-cat-energy-dumskiy">Репозиторий на GitHub</a>
             <h2 class="project__title">Техническая реализация</h2>
             <h3 class="project__subtitle">Адаптивная верстка</h3>
             <p class="project__text">
@@ -70,7 +69,7 @@
                     <source type="image/webp"
                       srcset="../img/cat-energy-devices-index@1x.webp 1x, ../img/cat-energy-devices-index@2x.webp 2x">
                     <img class="slider__image d-block w-100" src="../img/cat-energy-devices-index@1x.jpg"
-                      srcset="../img/cat-energy-devices-index@2x.jpg 2x" width="1440" height="1224" alt="Главная страница Кэт Энерджи на трех устройствах. Смартфон, планшет, компьютер.">
+                      srcset="../img/cat-energy-devices-index@2x.jpg 2x" width="1440" height="1224" loading="lazy" alt="Главная страница Кэт Энерджи на трех устройствах. Смартфон, планшет, компьютер.">
                   </picture>
                 </div>
                 <div class="slider__item carousel-item">
@@ -78,7 +77,7 @@
                     <source type="image/webp"
                       srcset="../img/cat-energy-devices-catalog@1x.webp 1x, ../img/cat-energy-devices-catalog@2x.webp 2x">
                     <img class="slider__image d-block w-100" src="../img/cat-energy-devices-catalog@1x.jpg"
-                      srcset="../img/cat-energy-devices-catalog@2x.jpg 2x" width="1440" height="1224" alt="Страница каталога Кэт Энерджи на трех устройствах. Смартфон, планшет, компьютер.">
+                      srcset="../img/cat-energy-devices-catalog@2x.jpg 2x" width="1440" height="1224" loading="lazy" alt="Страница каталога Кэт Энерджи на трех устройствах. Смартфон, планшет, компьютер.">
                   </picture>
                 </div>
                 <div class="slider__item carousel-item">
@@ -86,7 +85,7 @@
                     <source type="image/webp"
                       srcset="../img/cat-energy-devices-form@1x.webp 1x, ../img/cat-energy-devices-form@2x.webp 2x">
                     <img class="slider__image d-block w-100" src="../img/cat-energy-devices-form@1x.jpg"
-                      srcset="../img/cat-energy-devices-form@2x.jpg 2x" width="1440" height="1224" alt="Страница подбора программы Кэт Энерджи на трех устройствах. Смартфон, планшет, компьютер.">
+                      srcset="../img/cat-energy-devices-form@2x.jpg 2x" width="1440" height="1224" loading="lazy" alt="Страница подбора программы Кэт Энерджи на трех устройствах. Смартфон, планшет, компьютер.">
                   </picture>
                 </div>
               </div>
@@ -103,19 +102,19 @@
               <source type="image/webp"
                 srcset="../img/cat-energy-devices-index@1x.webp 1x, ../img/cat-energy-devices-index@2x.webp 2x">
               <img class="project__image project__image--large project__image--nojs" src="../img/cat-energy-devices-index@1x.jpg"
-                srcset="../img/cat-energy-devices-index@2x.jpg 2x" width="1440" height="1224" alt="Главная страница Кэт Энерджи на трех устройствах. Смартфон, планшет, компьютер.">
+                srcset="../img/cat-energy-devices-index@2x.jpg 2x" width="1440" height="1224" loading="lazy" alt="Главная страница Кэт Энерджи на трех устройствах. Смартфон, планшет, компьютер.">
             </picture>
             <picture>
               <source type="image/webp"
                 srcset="../img/cat-energy-devices-catalog@1x.webp 1x, ../img/cat-energy-devices-catalog@2x.webp 2x">
               <img class="project__image project__image--large project__image--nojs" src="../img/cat-energy-devices-catalog@1x.jpg"
-                srcset="../img/cat-energy-devices-catalog@2x.jpg 2x" width="1440" height="1224" alt="Страница каталога Кэт Энерджи на трех устройствах. Смартфон, планшет, компьютер.">
+                srcset="../img/cat-energy-devices-catalog@2x.jpg 2x" width="1440" height="1224" loading="lazy" alt="Страница каталога Кэт Энерджи на трех устройствах. Смартфон, планшет, компьютер.">
             </picture>
             <picture>
               <source type="image/webp"
                 srcset="../img/cat-energy-devices-form@1x.webp 1x, ../img/cat-energy-devices-form@2x.webp 2x">
               <img class="project__image project__image--large project__image--nojs" src="../img/cat-energy-devices-form@1x.jpg"
-                srcset="../img/cat-energy-devices-form@2x.jpg 2x" width="1440" height="1224" alt="Страница подбора программы Кэт Энерджи на трех устройствах. Смартфон, планшет, компьютер.">
+                srcset="../img/cat-energy-devices-form@2x.jpg 2x" width="1440" height="1224" loading="lazy" alt="Страница подбора программы Кэт Энерджи на трех устройствах. Смартфон, планшет, компьютер.">
             </picture>
             <h3 class="project__subtitle">Разметка и Стилизация</h3>
             <p class="project__text">
@@ -143,7 +142,7 @@
               <source type="image/webp"
                 srcset="../img/cat-energy-mobile-map@1x.webp 1x, ../img/cat-energy-mobile-map@2x.webp 2x">
               <img class="project__image" src="../img/cat-energy-mobile-map@1x.jpg"
-                srcset="../img/cat-energy-mobile-map@2x.jpg 2x" width="356" height="725" alt="Страница сайта Кэт Энерджи на трех устройствах. Смартфон, планшет, компьютер.">
+                srcset="../img/cat-energy-mobile-map@2x.jpg 2x" width="356" height="725" loading="lazy" alt="Страница сайта Кэт Энерджи на трех устройствах. Смартфон, планшет, компьютер.">
             </picture>
             <p class="project__text">
               На случай отказа работоспособности JavaScript предусмотрено отображение изображения карты.
@@ -152,7 +151,7 @@
               <source type="image/webp"
                 srcset="../img/cat-energy-mobile-map-nojs@1x.webp 1x, ../img/cat-energy-mobile-map-nojs@2x.webp 2x">
               <img class="project__image" src="../img/cat-energy-mobile-map-nojs@1x.jpg"
-                srcset="../img/cat-energy-mobile-map-nojs@2x.jpg 2x" width="356" height="725" alt="Страница сайта Кэт Энерджи на трех устройствах. Смартфон, планшет, компьютер.">
+                srcset="../img/cat-energy-mobile-map-nojs@2x.jpg 2x" width="356" height="725" loading="lazy" alt="Страница сайта Кэт Энерджи на трех устройствах. Смартфон, планшет, компьютер.">
             </picture>
             <h3 class="project__subtitle">Мобильное меню</h3>
             <p class="project__text">
@@ -162,7 +161,7 @@
               <source type="image/webp"
                 srcset="../img/cat-energy-mobile-menu@1x.webp 1x, ../img/cat-energy-mobile-menu@2x.webp 2x">
               <img class="project__image" src="../img/cat-energy-mobile-menu@1x.jpg"
-                srcset="../img/cat-energy-mobile-menu@2x.jpg 2x" width="812" height="725" alt="Страница сайта Кэт Энерджи на трех устройствах. Смартфон, планшет, компьютер.">
+                srcset="../img/cat-energy-mobile-menu@2x.jpg 2x" width="812" height="725" loading="lazy" alt="Страница сайта Кэт Энерджи на трех устройствах. Смартфон, планшет, компьютер.">
             </picture>
             <p class="project__text">
               На случай отказа работоспособности JavaScript предусмотрено статическое отображение мобильного меню в открытом состоянии.
@@ -171,7 +170,7 @@
               <source type="image/webp"
                 srcset="../img/cat-energy-mobile-menu-nojs@1x.webp 1x, ../img/cat-energy-mobile-menu-nojs@2x.webp 2x">
               <img class="project__image" src="../img/cat-energy-mobile-menu-nojs@1x.jpg"
-                srcset="../img/cat-energy-mobile-menu-nojs@2x.jpg 2x" width="356" height="725" alt="Страница сайта Кэт Энерджи на трех устройствах. Смартфон, планшет, компьютер.">
+                srcset="../img/cat-energy-mobile-menu-nojs@2x.jpg 2x" width="356" height="725" loading="lazy" alt="Страница сайта Кэт Энерджи на трех устройствах. Смартфон, планшет, компьютер.">
             </picture>
             <h3 class="project__subtitle">Оптимизация</h3>
             <p class="project__text">
