Adds skill 'webpack'

--- a/source/about.html
+++ b/source/about.html
@@ -153,6 +153,15 @@
             </p>
             <ul class="skills__list">
               <li class="skills__item">
+                <span class="visually-hidden">Webpack</span>
+                <picture>
+                  <source type="image/webp"
+                    srcset="img/logo/webpack-logo@1x.webp 1x, img/logo/webpack-logo@2x.webp 2x">
+                  <img class="skills__image" src="img/logo/webpack-logo@1x.png"
+                    srcset="img/logo/webpack-logo@2x.png 2x" width="85" height="85" alt="Логотип Webpack.">
+                </picture>
+              </li>
+              <li class="skills__item">
                 <span class="visually-hidden">Gulp</span>
                 <picture>
                   <source type="image/webp"
