Adds small changes

--- a/source/about.html
+++ b/source/about.html
@@ -85,7 +85,7 @@
             </p>
             <ul class="skills__list">
               <li class="skills__item">
-                <span class="visually-hidden">HTML5</span>
+                <h3 class="visually-hidden">HTML5</h3>
                 <picture>
                   <source type="image/webp"
                     srcset="img/logo/html-logo@1x.webp 1x, img/logo/html-logo@2x.webp 2x">
@@ -94,7 +94,7 @@
                 </picture>
               </li>
               <li class="skills__item">
-                <span class="visually-hidden">CSS3</span>
+                <h3 class="visually-hidden">CSS3</h3>
                 <picture>
                   <source type="image/webp"
                     srcset="img/logo/css-logo@1x.webp 1x, img/logo/css-logo@2x.webp 2x">
@@ -103,7 +103,7 @@
                 </picture>
               </li>
               <li class="skills__item">
-                <span class="visually-hidden">JavaScript</span>
+                <h3 class="visually-hidden">JavaScript</h3>
                 <picture>
                   <source type="image/webp"
                     srcset="img/logo/javascript-logo@1x.webp 1x, img/logo/javascript-logo@2x.webp 2x">
@@ -112,7 +112,7 @@
                 </picture>
               </li>
               <li class="skills__item">
-                <span class="visually-hidden">React</span>
+                <h3 class="visually-hidden">React</h3>
                 <picture>
                   <source type="image/webp"
                     srcset="img/logo/react-logo@1x.webp 1x, img/logo/react-logo@2x.webp 2x">
@@ -121,7 +121,7 @@
                 </picture>
               </li>
               <li class="skills__item">
-                <span class="visually-hidden">Bootstrap</span>
+                <h3 class="visually-hidden">Bootstrap</h3>
                 <picture>
                   <source type="image/webp"
                     srcset="img/logo/bootstrap-logo@1x.webp 1x, img/logo/bootstrap-logo@2x.webp 2x">
@@ -130,7 +130,7 @@
                 </picture>
               </li>
               <li class="skills__item">
-                <span class="visually-hidden">Sass</span>
+                <h3 class="visually-hidden">Sass</h3>
                 <picture>
                   <source type="image/webp"
                     srcset="img/logo/sass-logo@1x.webp 1x, img/logo/sass-logo@2x.webp 2x">
@@ -139,7 +139,7 @@
                 </picture>
               </li>
               <li class="skills__item">
-                <span class="visually-hidden">Less</span>
+                <h3 class="visually-hidden">Less</h3>
                 <picture>
                   <source type="image/webp"
                     srcset="img/logo/less-logo@1x.webp 1x, img/logo/less-logo@2x.webp 2x">
@@ -153,7 +153,7 @@
             </p>
             <ul class="skills__list">
               <li class="skills__item">
-                <span class="visually-hidden">Webpack</span>
+                <h3 class="visually-hidden">Webpack</h3>
                 <picture>
                   <source type="image/webp"
                     srcset="img/logo/webpack-logo@1x.webp 1x, img/logo/webpack-logo@2x.webp 2x">
@@ -162,7 +162,7 @@
                 </picture>
               </li>
               <li class="skills__item">
-                <span class="visually-hidden">Gulp</span>
+                <h3 class="visually-hidden">Gulp</h3>
                 <picture>
                   <source type="image/webp"
                     srcset="img/logo/gulp-logo@1x.webp 1x, img/logo/gulp-logo@2x.webp 2x">
@@ -171,7 +171,25 @@
                 </picture>
               </li>
               <li class="skills__item">
-                <span class="visually-hidden">Photoshop</span>
+                <h3 class="visually-hidden">Visual Studio Code</h3>
+                <picture>
+                  <source type="image/webp"
+                  srcset="img/logo/vscode-logo@1x.webp 1x, img/logo/vscode-logo@2x.webp 2x">
+                  <img class="skills__image" src="img/logo/vscode-logo@1x.png"
+                  srcset="img/logo/vscode-logo@2x.png 2x" width="85" height="85" alt="Логотип Visual Studio Code.">
+                </picture>
+              </li>
+              <li class="skills__item">
+                <h3 class="visually-hidden">Git</h3>
+                <picture>
+                  <source type="image/webp"
+                  srcset="img/logo/git-logo@1x.webp 1x, img/logo/git-logo@2x.webp 2x">
+                  <img class="skills__image" src="img/logo/git-logo@1x.png"
+                  srcset="img/logo/git-logo@2x.png 2x" width="85" height="85" alt="Логотип Git.">
+                </picture>
+              </li>
+              <li class="skills__item">
+                <h3 class="visually-hidden">Photoshop</h3>
                 <picture>
                   <source type="image/webp"
                     srcset="img/logo/photoshop-logo@1x.webp 1x, img/logo/photoshop-logo@2x.webp 2x">
@@ -180,16 +198,7 @@
                 </picture>
               </li>
               <li class="skills__item">
-                <span class="visually-hidden">Git</span>
-                <picture>
-                  <source type="image/webp"
-                    srcset="img/logo/git-logo@1x.webp 1x, img/logo/git-logo@2x.webp 2x">
-                  <img class="skills__image" src="img/logo/git-logo@1x.png"
-                    srcset="img/logo/git-logo@2x.png 2x" width="85" height="85" alt="Логотип Git.">
-                </picture>
-              </li>
-              <li class="skills__item">
-                <span class="visually-hidden">Figma</span>
+                <h3 class="visually-hidden">Figma</h3>
                 <picture>
                   <source type="image/webp"
                     srcset="img/logo/figma-logo@1x.webp 1x, img/logo/figma-logo@2x.webp 2x">
@@ -198,16 +207,7 @@
                 </picture>
               </li>
               <li class="skills__item">
-                <span class="visually-hidden">Visual Studio Code</span>
-                <picture>
-                  <source type="image/webp"
-                    srcset="img/logo/vscode-logo@1x.webp 1x, img/logo/vscode-logo@2x.webp 2x">
-                  <img class="skills__image" src="img/logo/vscode-logo@1x.png"
-                    srcset="img/logo/vscode-logo@2x.png 2x" width="85" height="85" alt="Логотип Visual Studio Code.">
-                </picture>
-              </li>
-              <li class="skills__item">
-                <span class="visually-hidden">Node Package Manager</span>
+                <h3 class="visually-hidden">Node Package Manager</h3>
                 <picture>
                   <source type="image/webp"
                     srcset="img/logo/npm-logo@1x.webp 1x, img/logo/npm-logo@2x.webp 2x">
